<resources>
    <string name="app_name">User Profile</string>
    <string name="username">UserName</string>
    <string name="address">Address</string>
    <string name="mobile">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">submit</string>
    <string name="update">update</string>
    <string name="register">Register</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
</resources>